--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "1.0.0-beta.7",
+    "@arcjet/next": "1.0.0-beta.7",
     "@hookform/resolvers": "^5.0.1",
     "@kinde-oss/kinde-auth-nextjs": "^2.6.2",
     "@prisma/client": "^6.8.2",
